# dht22-sensor

./: 42-dht22.rules  CMakeLists.txt  README.md
cmake/: FindKernelBuildEnv.cmake  Toolchain.cmake  Utils.cmake
examples/: CMakeLists.txt  ex1.c  ex2.c  example.c  utils.h
src/: CMakeLists.txt  Kbuild  dht22.c
